--- a/kudu/Dockerfile
+++ b/kudu/Dockerfile
@@ -283,6 +283,8 @@ ENV NUGET_PACKAGES /var/nuget
 # Note that after populating the cache we need to chmod 777 every directory underneath
 # so the Kudu user can access them; this can be removed if we run Kudu as root later.
 ENV NUGET_XMLDOC_MODE skip
+ENV DOTNET_SKIP_FIRST_TIME_EXPERIENCE 1
+
 RUN mkdir /var/nuget \
   && chmod a+rw /var/nuget \
   && dotnet new -i "Microsoft.DotNet.Web.ProjectTemplates.1.x::1.0.0-*" \
