Upgraded Git Version to 2.1.4

--- a/kudu/Dockerfile
+++ b/kudu/Dockerfile
@@ -24,7 +24,7 @@ RUN apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 \
   && apt-get install -y mono-complete --no-install-recommends \
   && apt-get install -y mono-apache-server4 --no-install-recommends \
   && apt-get install -y libapache2-mod-mono --no-install-recommends \
-  && apt-get install -y -t jessie-backports git --no-install-recommends \
+  && apt-get install -y git --no-install-recommends \
   && apt-get install -y openssh-client --no-install-recommends \
   && apt-get install -y vim tree --no-install-recommends \
   && apt-get install -y tcptraceroute \
