Changed the startup to accept runtime configured port

--- a/kudu/kudu.conf
+++ b/kudu/kudu.conf
@@ -1,6 +1,6 @@
-Listen 8181
+Listen port-placeholder
 
-<VirtualHost *:8181>
+<VirtualHost *:port-placeholder>
     ServerAdmin webmaster@localhost
 
     ProxyPass /webssh/ http://localhost:3000/webssh/ retry=0
