--- a/kudu/Dockerfile
+++ b/kudu/Dockerfile
@@ -456,17 +456,18 @@ ENV PYTHON_3_6_PATH /usr/local/python/3.6.6/bin
 # Install Kudu
 COPY kudu.conf /tmp
 COPY apache2.conf /tmp
+COPY Kudu.82.10417.3867.zip /tmp/Kudu.zip
+ENV KUDU_VERSION 82.10417.3867
 RUN npm install -g kudusync \
-  && wget -O /tmp/Kudu.zip https://wawsinfraprodbay063.blob.core.windows.net/kudu/Kudu.79.20129.3767.zip \
   && cp /tmp/kudu.conf /etc/apache2/sites-available/kudu.conf \
   && cp /tmp/apache2.conf /etc/apache2/apache2.conf  \
   && unzip -q -o /tmp/Kudu.zip \
   && mkdir /opt/Kudu \
-  && cp -rf ./79.20129.3767/* /opt/Kudu \
+  && cp -rf ./$KUDU_VERSION/* /opt/Kudu \
   && rm -f /tmp/Kudu.zip \
   && rm -f /tmp/apache2.conf \
   && rm -f /tmp/kudu.conf \
-  && rm -rf ./79.20129.3767 \
+  && rm -rf ./$KUDU_VERSION \
   && cat /opt/Kudu/Web.config | \
   sed 's|  <location path="." inheritInChildApplications="false">|  <location path="~/../../../opt/Kudu" inheritInChildApplications="false">|' > /opt/Kudu/Web.config2 \
   && mv /opt/Kudu/Web.config2 /opt/Kudu/Web.config \
